--- a/site/static/admin/index.html
+++ b/site/static/admin/index.html
@@ -9,7 +9,7 @@
   <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-  <script src="https://unpkg.com/netlify-cms@^2.9.1/dist/netlify-cms.js"></script>
+  <script src="./netlify-cms.js"></script>
   <script>
       // JS Goes here - ES6 supported
       if (window.netlifyIdentity) {
